--- a/BeauitySaloonWeb/Web.config
+++ b/BeauitySaloonWeb/Web.config
@@ -8,18 +8,22 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <system.web>
+    <customErrors mode="Off" />
+    <compilation debug="true" targetFramework="4.7.2" />
+  </system.web>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=ISBLT-9248; Initial Catalog=BeauitySaloonWeb; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=sadeedsqldb.database.windows.net;Initial Catalog=BeauitySaloonWeb;User ID=sauser;Password=SadeedUsman123;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
-	  <add key="Password" value="123456"/>
+    <add key="Password" value="123456" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-	<!--
+  <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -29,7 +33,6 @@
   -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
@@ -133,7 +136,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
